# mcpgen

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/swagger_petstore_openapi_3_0_mcp/: requirements.txt  server.py
mcpgen/: __init__.py  cli.py
mcpgen/generator/: python.py
mcpgen/ir/: models.py
mcpgen/parser/: __init__.py  loader.py  openapi.py  postman.py
mcpgen/templates/python/: requirements.txt.jinja2  server.py.jinja2
mcpify/: __init__.py  cli.py
mcpify/generator/: __init__.py  python.py
mcpify/ir/: __init__.py  models.py
mcpify/parser/: loader.py  openapi.py  postman.py
mcpify/templates/python/: requirements.txt.jinja2  server.py.jinja2
output/swagger_petstore_openapi_3_0_mcp/: requirements.txt  server.py
tests/: test_cli.py  test_generator.py  test_parser.py
tests/fixtures/: xquik-openapi31.json
